# init-problem

./: pyproject.toml
init_problem/: __main__.py  chapters.py  main.py  print_functions.py  problem.py
init_problem/database/: database_functions.py  fetch_data.py  get_data.py  insert_data.py  update_data.py
init_problem/tex/: equation_tex.py  extract_tex_env.py  functions_tex.py  path_tex.py  problem_tex.py
