[tool.poetry]
name = "init-problem"
version = "0.3.10"
description = "Added qrcode."
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
packages = [{include = "init_problem"}]


[tool.poetry.scripts]
init-problem = "init_problem.main:main"


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
